--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer bounds="tight" enable-pan src="m1a1_abrams.glb" ar ar-modes="scene-viewer quick-look" camera-controls environment-image="alps_field_4k.hdr" poster="poster.webp" shadow-intensity="1" exposure="0.85" camera-orbit="-35deg 75deg auto" shadow-softness="0.1">
+    <model-viewer bounds="tight" enable-pan src="m1a1_abrams_small.glb" ar ar-modes="scene-viewer quick-look" camera-controls environment-image="alps_field_4k.hdr" poster="poster.webp" shadow-intensity="1" exposure="0.85" camera-orbit="-35deg 75deg auto" shadow-softness="0.1">
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
