--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       <div id="ar-prompt">
           <img src="ar_hand_prompt.png">
       </div>
+      <div id="controls" class="dim">
+         <p><b>Besatzung: </b>4</p>
+         <p><b>Kaliber Hauptbewaffnung: </b>120mm</p>
+         <p><b>Kampfgewicht: </b>61,3 t</p>
+         <p><b>Max. Geschwindigkeit: </b>65 Km/H</p>        
+      </div>
     </model-viewer>  
     <script src="script.js"></script>
     <!-- Loads <model-viewer> for browsers: -->
