--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <img class="img-responsive" src="Assets/cwm-logo.png" alt="cwm-logo">
+    <img class="img-responsive" src="Assets/tank_codename.png" alt="tank_codename">
     <!-- <model-viewer> HTML element -->
     <model-viewer bounds="tight" enable-pan src="m1a1_abrams_small.glb" ar ar-modes="scene-viewer quick-look" touch-action="none" camera-controls environment-image="alps_field_4k.hdr" poster="poster.png" shadow-intensity="1" exposure="0.85" camera-orbit="-35deg 75deg auto" shadow-softness="0.1">
       <div class="progress-bar hide" slot="progress-bar">
