--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     <script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
   </head>
   <body>
-    <img class="cwm-logo-responsive" src="Assets/cwm-logo.png" alt="cwm-logo">
-    <img class="tank_codename-responsive" src="Assets/tank_codename.png" alt="tank_codename">
+    <div>
+      <img class="cwm-logo-responsive" src="Assets/cwm-logo.png" alt="cwm-logo">
+    </div>
+    <div>
+      <img class="tank_codename-responsive" src="Assets/tank_codename.png" alt="tank_codename">
+    </div>
+
     <!-- <model-viewer> HTML element -->
     <model-viewer bounds="tight" enable-pan src="m1a1_abrams_small.glb" ar ar-modes="scene-viewer quick-look" touch-action="none" camera-controls environment-image="alps_field_4k.hdr" poster="poster.png" shadow-intensity="1" exposure="0.85" camera-orbit="-35deg 75deg auto" shadow-softness="0.1">
       <div class="progress-bar hide" slot="progress-bar">
