--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
          <p><b>Kampfgewicht: </b>61,3 t</p>
          <p><b>Max. Geschwindigkeit: </b>65 Km/H</p>        
       </div>
-    </model-viewer>  
+    </model-viewer>
+    <div>
+      <img class="cwm_banner-responsive" src="Assets/tank_cwm_banner.png" alt="cwm_banner">
+    </div>
+      <div>
+      <img class="cwm_frame-responsive" src="Assets/tank_cwm_frame.png" alt="cwm_frame">
+    </div>
+    
     <script src="script.js"></script>
     <!-- Loads <model-viewer> for browsers: -->
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
