--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
       </div>
     </model-viewer>
     <div>
-      <img class="cwm_banner-responsive" src="Assets/tank_cwm_banner.png" alt="cwm_banner">
+      <img class="cwm_banner-responsive" src="Assets/cwm_banner.png" alt="cwm_banner">
     </div>
       <div>
-      <img class="cwm_frame-responsive" src="Assets/tank_cwm_frame.png" alt="cwm_frame">
+      <img class="cwm_frame-responsive" src="Assets/cwm_frame.png" alt="cwm_frame">
     </div>
     
     <script src="script.js"></script>
