--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       <div id="ar-prompt">
           <img src="ar_hand_prompt.png">
       </div>
-      <div id="controls" class="dim">
+      <div id="controls" class="dim">        
+         <img class="cwm_border-responsive" src="Assets/cwm_border.png" alt="cwm_border">
          <p><b>Besatzung: </b>4</p>
          <p><b>Kaliber Hauptbewaffnung: </b>120mm</p>
          <p><b>Kampfgewicht: </b>61,3 t</p>
