--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <img src="ar_hand_prompt.png">
       </div>
       <div id="controls" class="dim">        
-         <img class="cwm_border-responsive" src="Assets/cwm_border.png" alt="cwm_border">
+         <img class="cwm-border-responsive" src="Assets/cwm_border.png" alt="cwm_border">
          <p><b>Besatzung: </b>4</p>
          <p><b>Kaliber Hauptbewaffnung: </b>120mm</p>
          <p><b>Kampfgewicht: </b>61,3 t</p>
@@ -37,10 +37,10 @@
       </div>
     </model-viewer>
     <div>
-      <img class="cwm_banner-responsive" src="Assets/cwm_banner.png" alt="cwm_banner">
+      <img class="cwm-banner-responsive" src="Assets/cwm_banner.png" alt="cwm_banner">
     </div>
       <div>
-      <img class="cwm_frame-responsive" src="Assets/cwm_frame.png" alt="cwm_frame">
+      <img class="cwm-frame-responsive" src="Assets/cwm_frame.png" alt="cwm_frame">
     </div>
     
     <script src="script.js"></script>
