--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       </div>
       <div id="controls" class="dim">        
          <img class="cwm-border-responsive" src="Assets/cwm_border.png" alt="cwm_border">
+         <p><b>INFORMATIONEN: </b>4</p>
+         <br>
          <p><b>Besatzung: </b>4</p>
          <p><b>Kaliber Hauptbewaffnung: </b>120mm</p>
          <p><b>Kampfgewicht: </b>61,3 t</p>
