--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       </div>
       <div id="controls" class="dim">        
          <img class="cwm-border-responsive" src="Assets/cwm_border.png" alt="cwm_border">
-         <p><b>INFORMATIONEN: </b>4</p>
-         <p><b>Besatzung: </b>4</p>
-         <p><b>Kaliber Hauptbewaffnung: </b>120mm</p>
-         <p><b>Kampfgewicht: </b>61,3 t</p>
-         <p><b>Max. Geschwindigkeit: </b>65 Km/H</p>        
+         <p><b>INFORMATIONEN</b></p>
+         <p>Besatzung: 4</p>
+         <p>Kaliber Hauptbewaffnung: 120mm</p>
+         <p>Kampfgewicht: 61,3 t</p>
+         <p>Max. Geschwindigkeit: 65 Km/H</p>        
       </div>
     </model-viewer>
     <div>
