--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
          <img class="cwm-border-responsive" src="Assets/cwm_border.png" alt="cwm_border">
          <p><b>INFORMATIONEN</b></p>
          <p>Besatzung: 4</p>
-         <p>Kaliber Hauptbewaffnung: 120mm</p>
-         <p>Kampfgewicht: 61,3 t</p>
-         <p>Max. Geschwindigkeit: 65 Km/H</p>        
+         <p style="line-height: 0.5;">Kaliber Hauptbewaffnung: 120mm</p>
+         <p style="line-height: 0.5;">Kampfgewicht: 61,3 t</p>
+         <p style="line-height: 0.5;">Max. Geschwindigkeit: 65 Km/H</p>        
       </div>
     </model-viewer>
     <div>
