--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       </div>
       <div id="controls" class="dim">        
          <img class="cwm-border-responsive" src="Assets/cwm_border.png" alt="cwm_border">
-         <p><b>INFORMATIONEN</b></p>
-         <p>Besatzung: 4</p>
+         <p style="line-height: 2;"><b>INFORMATIONEN</b></p>
+         <p style="line-height: 0.5;">Besatzung: 4</p>
          <p style="line-height: 0.5;">Kaliber Hauptbewaffnung: 120mm</p>
          <p style="line-height: 0.5;">Kampfgewicht: 61,3 t</p>
          <p style="line-height: 0.5;">Max. Geschwindigkeit: 65 Km/H</p>        
