--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       </div>
       <div id="controls" class="dim">        
          <img class="cwm-border-responsive" src="Assets/cwm_border.png" alt="cwm_border">
-         <p style="line-height: 2;"><b>INFORMATIONEN</b></p>
-         <p style="line-height: 0.5;">Besatzung: 4</p>
-         <p style="line-height: 0.5;">Kaliber Hauptbewaffnung: 120mm</p>
-         <p style="line-height: 0.5;">Kampfgewicht: 61,3 t</p>
-         <p style="line-height: 0.5;">Max. Geschwindigkeit: 65 Km/H</p>        
+         <p style="line-height: 2; font-family: 'IBM Plex Mono', Arial, sans-serif;"><b>INFORMATIONEN</b></p>
+         <p style="line-height: 0.5; font-family: 'IBM Plex Mono', Arial, sans-serif;">Besatzung: 4</p>
+         <p style="line-height: 0.5; font-family: 'IBM Plex Mono', Arial, sans-serif;">Kaliber Hauptbewaffnung: 120mm</p>
+         <p style="line-height: 0.5; font-family: 'IBM Plex Mono', Arial, sans-serif;">Kampfgewicht: 61,3 t</p>
+         <p style="line-height: 0.5; font-family: 'IBM Plex Mono', Arial, sans-serif;">Max. Geschwindigkeit: 65 Km/H</p>        
       </div>
     </model-viewer>
     <div>
