--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <!-- <model-viewer> HTML element -->
-    <model-viewer bounds="tight" enable-pan src="m1a1_abrams_small.glb" ar ar-modes="scene-viewer quick-look" touch-action="none" camera-controls environment-image="alps_field_4k.hdr" poster="poster.png" shadow-intensity="1" exposure="0.85" camera-orbit="-35deg 75deg auto" shadow-softness="0.1">
+    <model-viewer bounds="tight" src="m1a1_abrams_small.glb" ar ar-modes="scene-viewer quick-look" touch-action="none" camera-controls environment-image="alps_field_4k.hdr" poster="poster.png" shadow-intensity="1" exposure="0.85" camera-orbit="-35deg 75deg auto" shadow-softness="0.1">
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
