--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
   </head>
   <body>
+    <div class="main_container">
     <div>
       <img class="cwm-logo-responsive" src="Assets/cwm-logo.png" alt="cwm-logo">
     </div>
@@ -43,7 +44,7 @@
       <div>
       <img class="cwm-frame-responsive" src="Assets/cwm_frame.png" alt="cwm_frame">
     </div>
-    
+    </div>  
     <script src="script.js"></script>
     <!-- Loads <model-viewer> for browsers: -->
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
